--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="styles.css" />
     <title>Color Picker Game</title>
+    <link rel="stylesheet" href="css/styles.css" />
+    <script src="js/index.js" defer></script>
   </head>
   <body>
     <div class="heading" data-heading>
@@ -34,6 +35,5 @@
       <div class="square" data-square></div>
       <div class="square" data-square></div>
     </div>
-    <script src="index.js"></script>
   </body>
 </html>
