--- a/index.html
+++ b/index.html
@@ -4,6 +4,33 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta
+      name="description"
+      content="A simple game to guess the color of the RGB color code. It was built using JavaScript, HTML and CSS"
+    />
+    <meta
+      name="keywords"
+      content="junior web developer, portfolio, Milona Christina"
+    />
+    <meta
+      name="title"
+      property="og:title"
+      content="portfolio Milona Christina"
+    />
+    <meta property="og:type" content="game" />
+    <meta
+      name="image"
+      property="og:image"
+      content="https://i.imgur.com/9E8hTLM.png"
+    />
+    <meta
+      name="description"
+      property="og:description"
+      content="A simple game to guess the color of the RGB color code. It was built using JavaScript, HTML and CSS"
+    />
+    <meta name="author" content="Milona Christina" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
